syntax = "proto3";

package manager;

option go_package = "./pb";

enum EventType {
  EVENT_NONE = 0;
  EVENT_LOG = 1;
  EVENT_AVAILABLE = 2;
  EVENT_SHUTTING_DOWN = 3;
  EVENT_STOPPED = 4;
}

message Event {
  EventType kind = 1;
  bytes data = 2;
}
